fixed logo distortion in IE10

--- a/app/styles/layout/components/_brand.sass
+++ b/app/styles/layout/components/_brand.sass
@@ -3,8 +3,10 @@
   margin-right: 10px
 
 .ap-brand-default
+  position: relative
+  top: 10px
   width: 150px
-  min-height: 50px
+  height: 50px
 
 .ap-brand-full
   width: 100%
